--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-flask==3.0.0
-flask-cors==4.0.0
-flask-limiter==3.5.0
-openai==1.54.0
-googletrans==4.0.0rc1
-pydub==0.25.1
-werkzeug==3.0.1
-python-dotenv==1.0.0
+flask
+flask-cors
+flask-limiter
+openai
+googletrans
+pydub
+werkzeug
+python-dotenv
